syntax = "proto3";

option csharp_namespace = "ServiceConnector.Protos";

message IndexRequest {
  string name = 1;
  string torznabFeed = 2;
  string apiKey = 3;
}

message IndexReply {
  string message = 1;
}

service IndexService {
  rpc Publish (IndexRequest) returns (IndexReply);
}
